crates/account-macro/tests/account_attribute/enum.fail.stderr
error: Deriving Pod is not supported for enums
 --> tests/account_attribute/enum.fail.rs:9:1
  |
9 | #[account]
  | ^^^^^^^^^^
  |
  = note: this error originates in the derive macro `bytemuck::Pod` (in Nightly builds, run with -Z macro-backtrace for more info)
